--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "geschenk",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://abdullatifghajar.github.io/weihnachtsgeschenk2023/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
